# openapi-tools

./: AGENTS.md  README.md  justfile  mkdocs.yml  pyproject.toml
docs/reference/: openapi_tools.md
openapi_kit/: __init__.py  _cli.py  _diff.py
openapi_tools/: __init__.py  __main__.py  _cli.py  _diff.py  _parser.py
openapi_tools/tui/: __main__.py  _diff_service.py  _utils.py  app.py  cli.py
openapi_tools/tui/screens/: endpoints.py  schemas.py
openapi_tools/tui/widgets/: endpoints_detail.py  endpoints_list.py  schemas_list.py
scripts/: generate_screenshots.py
tests/: test_diff.py  test_parser.py
tests/fixtures/: petstore.yaml  petstore_3_0.yaml  petstore_3_1.yaml  petstore_3_1_v2.yaml
